extra/kubernates/networking/bpeapi-destinationrule-v11-v12.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bpe-api
  namespace: bpe
spec:
  host: bpe-api
  subsets:
    - name: v10
      labels:
        version: v10
    - name: v11
      labels:
        version: v11
