extra/kubernates/networking/bpeapi-ingress-default.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bpe-ingress
  namespace: bpe
spec:
  backend:
    serviceName: bpe-api
    servicePort: 8080
