extra/kubernates/networking/bpeqrcode-virtualservice-100.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bpe-qrcode
  namespace: bpe
spec:
  hosts:
    - bpe-qrcode
  http:
    - route:
        - destination:
            host: bpe-qrcode
            subset: v12
---
